# nox-github-actions-example

./: README.md  noxfile.py  pyproject.toml
.github/workflows/: nox_test.yml
src/: logging_util.py  train_lr.py
tests/: test_train_lr.py
